# uvc-nozzle

./: .gitmodules  CMakeLists.txt  Info.plist.in  README.md  imgui.ini
.github/workflows/: ci.yml
src/: main.cpp
src/capture/: capture_device.hpp
src/capture/platform/linux/: capture_device.cpp
src/capture/platform/macos/: capture_device.h  capture_device.mm
src/capture/platform/windows/: capture_device.cpp
src/gui/: gui.cpp  gui.hpp  gui.mm  render_backend.hpp
src/gui/platform/linux/: render_backend_opengl.cpp
src/gui/platform/macos/: render_backend_metal.mm
src/gui/platform/windows/: render_backend_d3d11.cpp
src/publisher/: publisher.cpp  publisher.hpp  publisher.mm
tests/: test_main.cpp
